# QR-Code-Maker

./: Makefile  README.md  build.bat  build.py  pyproject.toml  test_logo_qr.py
src/: main.py  qr_code_maker.py
tests/: test_gui.py  test_qr_code_maker.py
