[project]
name = "qr-code-maker"
version = "0.1.0"
description = "A tool to generate high-resolution QR codes with titles and URLs from CSV files"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "requests>=2.31.0",
    "segno>=1.5.2",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "mypy>=1.5.0",
  "pyinstaller>=6.0.0",
]
[tool.setuptools]
py-modules = ["main", "qr_code_maker"]
package-dir = { "" = "src" }

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
